<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetails">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MovieDetails">


        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="@dimen/movie_icon_width"
            android:layout_height="@dimen/movie_icon_height"
            android:layout_marginTop="8dp"
            android:layout_marginRight="68dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:paddingLeft="@dimen/padding"
            android:paddingTop="@dimen/padding"
            app:layout_constraintEnd_toStartOf="@+id/iv_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title" />

        <TextView
            android:id="@+id/tv_header_rating"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:paddingLeft="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:text="@string/user_rating_label"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <RatingBar
            android:id="@+id/rbv_user_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding"
            android:numStars="10"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_rating"
            />

        <TextView
            android:id="@+id/tv_header_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:text="@string/release_date_label"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rbv_user_rating" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding"
            tools:text="10/10/2010"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_date"
            />

        <TextView
            android:id="@+id/tv_header_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:text="@string/overview_label"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

        <TextView
            android:id="@+id/tv_overview"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding"
            android:paddingLeft="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_overview"
            />

        <TextView
            android:id="@+id/tv_header_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:text="@string/trailers_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview"
            />

        <TextView
            android:id="@+id/tv_trailers"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_trailers"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trailers"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingRight="@dimen/padding"
            android:paddingLeft="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailers">
        </androidx.recyclerview.widget.RecyclerView>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorLine"
            app:layout_constraintTop_toBottomOf="@+id/rv_trailers"/>

        <TextView
            android:id="@+id/tv_header_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:text="@string/reviews_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/rv_trailers"
            />

        <TextView
            android:id="@+id/tv_reviews"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding"
            android:paddingLeft="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_reviews"
            />

        <ImageView
            android:id="@+id/iv_favButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingTop="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:src="@drawable/ic_favorite_border_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>